--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -34,49 +34,34 @@
         <div class="col-7">
             <div class="row">
                 <div class="col-4 mb-4">
-                    <mat-card class="example-card bg-lilac" appearance="outlined">
-                        <img mat-card-image src="assets/images/login-image.jpg" />
+                    <mat-card class="banner-card banner-card-bg-1" appearance="outlined">
+                        <img mat-card-image src="assets/images/banner-1.png" />
                         
                     </mat-card>
                 </div>
                 <div class="col-4 mb-4">
-                    <mat-card class="example-card" appearance="outlined">
-                        <img mat-card-image src="assets/images/login-image.jpg" />
-                        <div
-                            class="text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">                        
-                        </div>
+                    <mat-card class="banner-card banner-card-bg-2" appearance="outlined">
+                        <img mat-card-image src="assets/images/banner-2.png" />                       
                     </mat-card>
                 </div>
                 <div class="col-4 mb-4">
-                    <mat-card class="example-card" appearance="outlined">
-                        <img mat-card-image src="assets/images/login-image.jpg" />
-                        <div
-                            class="text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">                        
-                        </div>
+                    <mat-card class="banner-card banner-card-bg-3" appearance="outlined">
+                        <img mat-card-image src="assets/images/banner-3.png" />                       
                     </mat-card>
                 </div>
                 <div class="col-4">
-                    <mat-card class="example-card" appearance="outlined">
-                        <img mat-card-image src="assets/images/login-image.jpg" />
-                        <div
-                            class="text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">                        
-                        </div>
+                    <mat-card class="banner-card banner-card-bg-4" appearance="outlined">
+                        <img mat-card-image src="assets/images/banner-4.png" />                        
                     </mat-card>
                 </div>
                 <div class="col-4">
-                    <mat-card class="example-card" appearance="outlined">
-                        <img mat-card-image src="assets/images/login-image.jpg" />
-                        <div
-                            class="text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">                        
-                        </div>
+                    <mat-card class="banner-card banner-card-bg-5" appearance="outlined">
+                        <img mat-card-image src="assets/images/banner-2.png" />                        
                     </mat-card>
                 </div>
                 <div class="col-4">
-                    <mat-card class="example-card" appearance="outlined">
-                        <img mat-card-image src="assets/images/login-image.jpg" />
-                        <div
-                            class="text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">                        
-                        </div>
+                    <mat-card class="banner-card banner-card-bg-6" appearance="outlined">
+                        <img mat-card-image src="assets/images/banner-2.png" />                        
                     </mat-card>
                 </div>
             </div>
