--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -34,33 +34,33 @@
         <div class="col-7">
             <div class="row">
                 <div class="col-4 mb-4">
-                    <mat-card class="banner-card banner-card-bg-1" appearance="outlined">
+                    <mat-card class="banner-card banner-card-bg-1 border-0 shadow-sm p-3" appearance="outlined">
                         <img mat-card-image src="assets/images/banner-1.png" />
                         
                     </mat-card>
                 </div>
                 <div class="col-4 mb-4">
-                    <mat-card class="banner-card banner-card-bg-2" appearance="outlined">
+                    <mat-card class="banner-card banner-card-bg-2 border-0 shadow-sm p-3" appearance="outlined">
                         <img mat-card-image src="assets/images/banner-2.png" />                       
                     </mat-card>
                 </div>
                 <div class="col-4 mb-4">
-                    <mat-card class="banner-card banner-card-bg-3" appearance="outlined">
+                    <mat-card class="banner-card banner-card-bg-3 border-0 shadow-sm p-3" appearance="outlined">
                         <img mat-card-image src="assets/images/banner-3.png" />                       
                     </mat-card>
                 </div>
                 <div class="col-4">
-                    <mat-card class="banner-card banner-card-bg-4" appearance="outlined">
+                    <mat-card class="banner-card banner-card-bg-4 border-0 shadow-sm p-3" appearance="outlined">
                         <img mat-card-image src="assets/images/banner-4.png" />                        
                     </mat-card>
                 </div>
                 <div class="col-4">
-                    <mat-card class="banner-card banner-card-bg-5" appearance="outlined">
+                    <mat-card class="banner-card banner-card-bg-5 border-0 shadow-sm p-3" appearance="outlined">
                         <img mat-card-image src="assets/images/banner-5.png" />                        
                     </mat-card>
                 </div>
                 <div class="col-4">
-                    <mat-card class="banner-card banner-card-bg-6" appearance="outlined">
+                    <mat-card class="banner-card banner-card-bg-6 border-0 shadow-sm p-3" appearance="outlined">
                         <img mat-card-image src="assets/images/banner-6.png" />                        
                     </mat-card>
                 </div>
