push card banner changees

--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -18,50 +18,50 @@
 <!-- banner-section -->
 <section class="container">
     <div class="row py-5 align-items-center">
-        <div class="col-5">            
+        <div class="col-5">
             <div class="banner-font fw-bold">
                 Unlock Your <span class="text-primary">Gift,</span> Embrace the
                 <span class="text-primary">Moment!</span>
-              </div>
-              <div class="mt-4">
+            </div>
+            <div class="mt-4">
                 Discover a world of rewards made just for you! Enter your unique code
                 and browse a curated selection of gifts tailored to bring joy. With
                 every choice, a moment of celebration awaits. Whether it’s a small
                 token or a grand surprise, your perfect gift is only a click away.
                 Choose, click, and celebrate with ease!
-              </div>
+            </div>
         </div>
         <div class="col-7">
             <div class="row">
                 <div class="col-4 mb-4">
                     <mat-card class="banner-card banner-card-bg-1 shadow-sm p-3" appearance="outlined">
                         <img mat-card-image src="assets/images/banner-1.png" />
-                        
+
                     </mat-card>
                 </div>
                 <div class="col-4 mb-4">
                     <mat-card class="banner-card banner-card-bg-2 shadow-sm p-3 py-5" appearance="outlined">
-                        <img mat-card-image src="assets/images/banner-5.png" />                       
+                        <img mat-card-image src="assets/images/banner-5.png" />
                     </mat-card>
                 </div>
                 <div class="col-4 mb-4">
                     <mat-card class="banner-card banner-card-bg-3 shadow-sm p-3" appearance="outlined">
-                        <img mat-card-image src="assets/images/banner-3.png" />                       
+                        <img mat-card-image src="assets/images/banner-3.png" />
                     </mat-card>
                 </div>
                 <div class="col-4">
                     <mat-card class="banner-card banner-card-bg-4 shadow-sm p-3 py-5" appearance="outlined">
-                        <img mat-card-image src="assets/images/banner-4.png" />                        
+                        <img mat-card-image src="assets/images/banner-4.png" />
                     </mat-card>
                 </div>
                 <div class="col-4">
                     <mat-card class="banner-card banner-card-bg-5 shadow-sm p-3" appearance="outlined">
-                        <img mat-card-image src="assets/images/banner-2.png" />                        
+                        <img mat-card-image src="assets/images/banner-2.png" />
                     </mat-card>
                 </div>
                 <div class="col-4">
                     <mat-card class="banner-card banner-card-bg-6 shadow-sm p-3 py-5" appearance="outlined">
-                        <img mat-card-image src="assets/images/banner-6.png" />                        
+                        <img mat-card-image src="assets/images/banner-6.png" />
                     </mat-card>
                 </div>
             </div>
@@ -71,8 +71,12 @@
 <!-- /banner-section -->
 <!-- gift-section -->
 <section class="container py-5">
-    <div>
-        <h1>New Arrivals</h1>
+    <div class="row">
+        <div class="col-12 mb-5">
+            <div class="banner-font fw-bold">
+                Claim your <span class="text-primary">Reward</span>
+            </div>
+        </div>
     </div>
     <div class="row">
         <div class="col-4">
@@ -82,7 +86,7 @@
                         <h5>Best seller</h5>
                     </mat-card-title>
                 </mat-card-header>
-                <img mat-card-image src="assets/images/gift-card.png" />
+                <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
                 <mat-card-footer class="p-3">
                     <div>
                         <div>
@@ -104,7 +108,7 @@
                         <h5>Best seller</h5>
                     </mat-card-title>
                 </mat-card-header>
-                <img mat-card-image src="assets/images/gift-card.png" />
+                <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
                 <mat-card-footer class="p-3">
                     <div>
                         <div>
@@ -126,7 +130,7 @@
                         <h5>Best seller</h5>
                     </mat-card-title>
                 </mat-card-header>
-                <img mat-card-image src="assets/images/gift-card.png" />
+                <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
                 <mat-card-footer class="p-3">
                     <div>
                         <div>
