updated button and font size of reward cards

--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -79,67 +79,194 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-4">
-            <mat-card class="example-card border border-0 bg-light gift-card" appearance="outlined">
+        <div class="col-3 mb-5">
+            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>
-                        <h5>Best seller</h5>
+                        <h6>Best seller</h6>
                     </mat-card-title>
                 </mat-card-header>
-                <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                <mat-card-content>
+                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                </mat-card-content>
                 <mat-card-footer class="p-3">
                     <div>
                         <div>
-                            <h5 class="mb-0">Copper Bottle</h5>
+                            <h6 class="mb-0">Copper Bottle</h6>
                         </div>
                         <div>stylish,eco-friendly</div>
                     </div>
                     <div>
-                        <button mat-flat-button class="button-mh-60 w-100 my-3">Claim Gift</button>
+                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
                     </div>
 
                 </mat-card-footer>
             </mat-card>
         </div>
-        <div class="col-4">
-            <mat-card class="example-card border border-0 bg-light gift-card" appearance="outlined">
+        <div class="col-3 mb-5">
+            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>
-                        <h5>Best seller</h5>
+                        <h6>Best seller</h6>
                     </mat-card-title>
                 </mat-card-header>
-                <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                <mat-card-content>
+                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                </mat-card-content>
                 <mat-card-footer class="p-3">
                     <div>
                         <div>
-                            <h5 class="mb-0">Copper Bottle</h5>
+                            <h6 class="mb-0">Copper Bottle</h6>
                         </div>
                         <div>stylish,eco-friendly</div>
                     </div>
                     <div>
-                        <button mat-flat-button class="button-mh-60 w-100 my-3">Claim Gift</button>
+                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
                     </div>
 
                 </mat-card-footer>
             </mat-card>
         </div>
-        <div class="col-4">
-            <mat-card class="example-card border border-0 bg-light gift-card" appearance="outlined">
+        <div class="col-3 mb-5">
+            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>
-                        <h5>Best seller</h5>
+                        <h6>Best seller</h6>
                     </mat-card-title>
                 </mat-card-header>
-                <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                <mat-card-content>
+                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                </mat-card-content>
                 <mat-card-footer class="p-3">
                     <div>
                         <div>
-                            <h5 class="mb-0">Copper Bottle</h5>
+                            <h6 class="mb-0">Copper Bottle</h6>
                         </div>
                         <div>stylish,eco-friendly</div>
                     </div>
                     <div>
-                        <button mat-flat-button class="button-mh-60 w-100 my-3">Claim Gift</button>
+                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
+                    </div>
+
+                </mat-card-footer>
+            </mat-card>
+        </div>
+        <div class="col-3 mb-5">
+            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
+                <mat-card-header>
+                    <mat-card-title>
+                        <h6>Best seller</h6>
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                </mat-card-content>
+                <mat-card-footer class="p-3">
+                    <div>
+                        <div>
+                            <h6 class="mb-0">Copper Bottle</h6>
+                        </div>
+                        <div>stylish,eco-friendly</div>
+                    </div>
+                    <div>
+                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
+                    </div>
+
+                </mat-card-footer>
+            </mat-card>
+        </div>
+        <div class="col-3 mb-5">
+            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
+                <mat-card-header>
+                    <mat-card-title>
+                        <h6>Best seller</h6>
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                </mat-card-content>
+                <mat-card-footer class="p-3">
+                    <div>
+                        <div>
+                            <h6 class="mb-0">Copper Bottle</h6>
+                        </div>
+                        <div>stylish,eco-friendly</div>
+                    </div>
+                    <div>
+                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
+                    </div>
+
+                </mat-card-footer>
+            </mat-card>
+        </div>
+        <div class="col-3 mb-5">
+            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
+                <mat-card-header>
+                    <mat-card-title>
+                        <h6>Best seller</h6>
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                </mat-card-content>
+                <mat-card-footer class="p-3">
+                    <div>
+                        <div>
+                            <h6 class="mb-0">Copper Bottle</h6>
+                        </div>
+                        <div>stylish,eco-friendly</div>
+                    </div>
+                    <div>
+                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
+                    </div>
+
+                </mat-card-footer>
+            </mat-card>
+        </div>
+        <div class="col-3 mb-5">
+            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
+                <mat-card-header>
+                    <mat-card-title>
+                        <h6>Best seller</h6>
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                </mat-card-content>
+                <mat-card-footer class="p-3">
+                    <div>
+                        <div>
+                            <h6 class="mb-0">Copper Bottle</h6>
+                        </div>
+                        <div>stylish,eco-friendly</div>
+                    </div>
+                    <div>
+                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
+                    </div>
+
+                </mat-card-footer>
+            </mat-card>
+        </div>
+        <div class="col-3 mb-5">
+            <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
+                <mat-card-header>
+                    <mat-card-title>
+                        <h6>Best seller</h6>
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                </mat-card-content>
+
+                <mat-card-footer class="p-3">
+                    <div>
+                        <div>
+                            <h6 class="mb-0">Copper Bottle</h6>
+                        </div>
+                        <div>stylish,eco-friendly</div>
+                    </div>
+                    <div>
+                        <button mat-flat-button class="button-mh-60 w-100 my-3 bg-dark">Claim Gift</button>
                     </div>
 
                 </mat-card-footer>
