updated image and badge

--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.html
@@ -83,11 +83,13 @@
             <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>
-                        <h6>Best seller</h6>
+                        <span class="badge shadow-sm">Best seller</span>
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    <div class="d-flex justify-content-center mt-3">
+                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    </div> 
                 </mat-card-content>
                 <mat-card-footer class="p-3">
                     <div>
@@ -107,11 +109,13 @@
             <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>
-                        <h6>Best seller</h6>
+                        <span class="badge shadow-sm">Best seller</span>
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    <div class="d-flex justify-content-center mt-3">
+                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    </div>                    
                 </mat-card-content>
                 <mat-card-footer class="p-3">
                     <div>
@@ -131,11 +135,13 @@
             <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>
-                        <h6>Best seller</h6>
+                        <span class="badge shadow-sm">Best seller</span>
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    <div class="d-flex justify-content-center mt-3">
+                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    </div>
                 </mat-card-content>
                 <mat-card-footer class="p-3">
                     <div>
@@ -155,11 +161,13 @@
             <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>
-                        <h6>Best seller</h6>
+                        <span class="badge shadow-sm">Best seller</span>
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    <div class="d-flex justify-content-center mt-3">
+                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    </div>
                 </mat-card-content>
                 <mat-card-footer class="p-3">
                     <div>
@@ -179,11 +187,13 @@
             <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>
-                        <h6>Best seller</h6>
+                        <span class="badge shadow-sm">Best seller</span>
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    <div class="d-flex justify-content-center mt-3">
+                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    </div>
                 </mat-card-content>
                 <mat-card-footer class="p-3">
                     <div>
@@ -203,11 +213,13 @@
             <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>
-                        <h6>Best seller</h6>
+                        <span class="badge shadow-sm">Best seller</span>
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    <div class="d-flex justify-content-center mt-3">
+                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    </div>
                 </mat-card-content>
                 <mat-card-footer class="p-3">
                     <div>
@@ -227,11 +239,13 @@
             <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>
-                        <h6>Best seller</h6>
+                        <span class="badge shadow-sm">Best seller</span>
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    <div class="d-flex justify-content-center mt-3">
+                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    </div>
                 </mat-card-content>
                 <mat-card-footer class="p-3">
                     <div>
@@ -251,11 +265,13 @@
             <mat-card class="example-card border border-0 bg-light gift-card p-3" appearance="outlined">
                 <mat-card-header>
                     <mat-card-title>
-                        <h6>Best seller</h6>
+                        <span class="badge shadow-sm">Best seller</span>
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    <div class="d-flex justify-content-center mt-3">
+                        <img mat-card-image height="200px" width="200px" src="assets/images/gift-card.png" />
+                    </div>
                 </mat-card-content>
 
                 <mat-card-footer class="p-3">
