--- a/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
+++ b/client/webUI/src/app/pages/employee/select-gift-voucher/select-gift-voucher.component.css
@@ -37,3 +37,11 @@
 }
 
 /* == reward css style == */
+.badge{
+    background: white;
+    position: relative;
+    left: 70%;    
+    padding: 10px 20px;
+    border-radius: 25px;
+    margin-bottom: 5px;
+}
